// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`varchar.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 136,
            "relname": "varchar_tbl",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "f1",
                "is_local": true,
                "location": 148,
                "typeName": {
                  "location": 151,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "varchar",
                      },
                    },
                  ],
                  "typemod": -1,
                  "typmods": [
                    {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 159,
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 27,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "a",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 27,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "A",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 86,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 73,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 98,
                          "sval": {
                            "sval": "1",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 27,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 39,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 27,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "3",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 47,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 34,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 59,
                          "sval": {
                            "sval": "",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 69,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 56,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 81,
                          "sval": {
                            "sval": "cd",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 26,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "c     ",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 17,
                "relname": "varchar_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 10,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 10,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "c",
                },
                "inh": true,
                "location": 21,
                "relname": "varchar_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 44,
                },
              },
              "location": 49,
              "name": [
                {
                  "String": {
                    "sval": "<>",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 52,
                  "sval": {
                    "sval": "a",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "c",
                },
                "inh": true,
                "location": 21,
                "relname": "varchar_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 44,
                },
              },
              "location": 49,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 51,
                  "sval": {
                    "sval": "a",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "c",
                },
                "inh": true,
                "location": 21,
                "relname": "varchar_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 44,
                },
              },
              "location": 49,
              "name": [
                {
                  "String": {
                    "sval": "<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 51,
                  "sval": {
                    "sval": "a",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "c",
                },
                "inh": true,
                "location": 21,
                "relname": "varchar_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 44,
                },
              },
              "location": 49,
              "name": [
                {
                  "String": {
                    "sval": "<=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 52,
                  "sval": {
                    "sval": "a",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "c",
                },
                "inh": true,
                "location": 21,
                "relname": "varchar_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 44,
                },
              },
              "location": 49,
              "name": [
                {
                  "String": {
                    "sval": ">",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 51,
                  "sval": {
                    "sval": "a",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "c",
                },
                "inh": true,
                "location": 21,
                "relname": "varchar_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "c",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 44,
                },
              },
              "location": 49,
              "name": [
                {
                  "String": {
                    "sval": ">=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 52,
                  "sval": {
                    "sval": "a",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "varchar_tbl",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 58 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 183,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 170,
            "relname": "varchar_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 195,
                          "sval": {
                            "sval": "abcde",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 67 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 16,
                "relname": "varchar_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 52,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 70,
                          "sval": {
                            "sval": "abcd  ",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 80,
                          "sval": {
                            "sval": "varchar(4)",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 52,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 72 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 26,
                          "sval": {
                            "sval": "abcde",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 35,
                          "sval": {
                            "sval": "varchar(4)",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`varchar.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "abcde",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 44,
                                  "sval": {
                                    "sval": "varchar(4)",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
